cabal-version:       >= 1.10
name:                chronologique
version:             0.2.1
synopsis:            Time to manipulate time
license:             BSD3
license-file:        LICENCE
author:              Andrew Cowie <andrew@operationaldynamics.com>
maintainer:          Andrew Cowie <andrew@operationaldynamics.com>
copyright:           © 2016-2017 Operational Dynamics Consulting Pty Ltd, and Others
category:            Text
tested-with:         GHC == 8.0

build-type:          Simple

library
  default-language:  Haskell2010

  build-depends:     base,
                     time,
                     hourglass

  hs-source-dirs:    lib

  exposed-modules:   Chrono.TimeStamp
                     Chrono.Compat
  other-modules:     Chrono.Formats

  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto-top


test-suite           experiment
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  buildable:         False

  build-depends:     base,
                     chronologique

  hs-source-dirs:    tests

  main-is:           Experiment.hs

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs


test-suite           check
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base,
                     hspec,
                     hourglass,
                     chronologique

  hs-source-dirs:    tests

  main-is:           TestSuite.hs

  other-modules:     CheckTimeStamp

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

-- vim: set tabstop=22 expandtab:
